docs: streamline styling and surface feature screenshots

--- a/core-features/chat-with-hue.mdx
+++ b/core-features/chat-with-hue.mdx
@@ -3,6 +3,8 @@ title: "Chat with Hue"
 description: "Ask natural-language questions and get instant answers from Humyn"
 ---
 
+![Chat with Hue conversation](/screenshots/hue_chat.png)
+
 ## What Hue unlocks
 
 Hue is your AI research partner. Instead of combing through dashboards, you can ask freeform questions and receive synthesized answers, quotes, and recommended next steps drawn from the latest community conversations.
