--- a/core-features/dashboard.mdx
+++ b/core-features/dashboard.mdx
@@ -3,7 +3,7 @@ title: "Dashboard"
 description: "Command center for scanning Humyn signals at a glance"
 ---
 
-![Dashboard overview](../images/hero-light.png)
+![Humyn dashboard overview](/screenshots/project_dashboard.png)
 
 ## Why it matters
 
