--- a/core-features/explore.mdx
+++ b/core-features/explore.mdx
@@ -3,6 +3,8 @@ title: "Explore"
 description: "Investigate raw conversations, cluster patterns, and capture stories"
 ---
 
+![Humyn Explore workspace](/screenshots/explore.png)
+
 ## Why Explore
 
 Explore is where researchers and storytellers live. It lets you peel back the AI summaries and get eyes on the conversations themselves—perfect for crafting decks, validating hunches, and finding the quote that seals the argument.
