--- a/core-features/feedback-hub.mdx
+++ b/core-features/feedback-hub.mdx
@@ -3,4 +3,31 @@ title: "Feedback Hub"
 description: "Raw feedback table and cards"
 ---
 
-Columns: Username, Feedback, Engagement, Confidence, Source.
+![Feedback Hub inbox](/screenshots/add_comments.png)
+
+## Why it matters
+
+Feedback Hub gathers every Reddit comment, forum reply, and uploaded transcript into a single table. Tag, sort, and score each item so product, research, and marketing teams stay aligned on the raw voice of the customer.
+
+## Key fields
+
+- **Username & source** — Track where the conversation started and who said it.  
+- **Feedback** — Full text with automatic summaries to skim faster.  
+- **Engagement** — Gauge traction by upvotes, replies, or shares.  
+- **Confidence** — Record how trustworthy the signal is after human review.  
+- **Status** — Flag items you’ve triaged, assigned, or sent downstream.
+
+## Typical actions
+
+| Action | Outcome |
+| --- | --- |
+| Apply filters | Focus on specific personas, product areas, or sentiment. |
+| Save a view | Build reusable boards for roadmap grooming or research syncs. |
+| Send to Hue | Kick off follow-up questions without leaving the table. |
+| Export rows | Drop curated feedback into decks, briefs, or CRM notes. |
+
+## Related workflows
+
+- Bubble up high-signal items to [Dashboard](dashboard).  
+- Turn curated rows into themes with [Explore](explore).  
+- Use [Chat with Hue](chat-with-hue) to expand on promising leads.
