--- a/core-features/metrics.mdx
+++ b/core-features/metrics.mdx
@@ -13,6 +13,8 @@ Metrics transforms the qualitative insights Humyn surfaces into <mark>lightweigh
   style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
 />
 
+![Metrics detail view](/screenshots/example_comment_analysis.png)
+
 The mockup above reflects how Humyn pairs qualitative signals with metric tiles:
 
 - **Conversation volume** visualizes the size of the dataset backing every insight.  
