--- a/core-features/themes-keywords.mdx
+++ b/core-features/themes-keywords.mdx
@@ -1,6 +1,22 @@
----
 title: "Themes & Keywords"
 description: "Clusters and top phrases"
 ---
 
-See clustered themes and extracted keywords.
+![Themes and keywords view](/screenshots/source_citation.png)
+
+## Overview
+
+Humyn automatically clusters conversations into themes and extracts representative keywords. Use this view to watch which topics are accelerating, which arguments resonate, and where gaps are forming.
+
+## How to work
+
+- **Review clusters** — Each tile groups similar comments so you can scan summaries before diving in.  
+- **Drill into keywords** — Click a keyword to open the exact quotes driving that phrase.  
+- **Track movement** — Compare theme volume week over week to surface emerging needs.  
+- **Save views** — Capture filters for specific personas, channels, or product areas.
+
+## Related moves
+
+- Send standout clusters to [Insights (SWOT)](insights-swot) for framing.  
+- Share keyword cards with marketing to validate messaging.  
+- Convert patterns into dashboards widgets inside [Metrics](metrics).
