--- a/essentials/images.mdx
+++ b/essentials/images.mdx
@@ -22,6 +22,7 @@ Humyn’s visual identity leans on calm gradients, rounded corners, and ample wh
 - `/assets/landing-page.png`: Landing page hero used on the docs home screen.
 - `/assets/metrics-mockup.png`: Metrics feature mockup for documentation and enablement.
 - `/assets/demo-video.mp4`: Overview walkthrough for onboarding or marketing use.
+- `/screenshots/`: Product screenshots for core feature docs (dashboard, Explore, Hue chat, and more).
 
 <Callout>
 All image assets live in the `/images` and `/logo` directories. Keep filenames predictable; we reserve camelCase for UI exports and kebab-case for marketing composites.
