--- a/guides/activation-playbook.mdx
+++ b/guides/activation-playbook.mdx
@@ -40,7 +40,7 @@ Founders, product, research, and GTM leads running their first Humyn implementat
 ## Metrics to watch
 
 - Time to first insight published.  
-- # of bookmarked threads or quotes shared with leadership.  
+- Number of bookmarked threads or quotes shared with leadership.  
 - Active contributors per function after week two.  
 - Stakeholder confidence rating (quick weekly pulse).
 
