--- a/index.mdx
+++ b/index.mdx
@@ -150,3 +150,29 @@ Need help fast? Hit the `Support` link in the navbar or email <a href="mailto:su
   alt="Humyn project dashboard overview"
   style={{ borderRadius: "1rem", marginTop: "2.5rem", boxShadow: "0 24px 70px rgba(15, 23, 42, 0.14)" }}
 />
+
+## Stay connected
+
+<Columns cols={3}>
+  <Card title="Instagram" icon="camera" href="https://www.instagram.com/humynspace">
+    Follow launches, behind-the-scenes clips, and community wins.
+  </Card>
+  <Card title="Twitter / X" icon="twitter" href="https://twitter.com/humynspace">
+    Catch feature drops, product threads, and real-time updates.
+  </Card>
+  <Card title="TikTok" icon="film" href="https://www.tiktok.com/@humynspace">
+    Watch quick demos and storytelling tips from the team.
+  </Card>
+</Columns>
+
+<Columns cols={3}>
+  <Card title="YouTube" icon="youtube" href="https://www.youtube.com/@humynspace">
+    Deep dives, walkthroughs, and interviews with Humyn operators.
+  </Card>
+  <Card title="LinkedIn" icon="linkedin" href="https://www.linkedin.com/company/humynspace">
+    Strategic updates for product, research, and GTM leaders.
+  </Card>
+  <Card title="Threads" icon="leaf" href="https://www.threads.net/@humynspace">
+    Lightweight product notes and community highlights.
+  </Card>
+</Columns>
