--- a/introduction/account-and-billing.mdx
+++ b/introduction/account-and-billing.mdx
@@ -31,7 +31,7 @@ All plans include full access to dashboards, Explore views, and saved insights. 
 | Team seats | Up to 3 | Up to 10 | Unlimited (on request) |
 | Support | Community Discord | Email + Discord | Priority channel |
 
-> Need more than 5,000 comments a month? Reach out to `hello@humyn.space` and we’ll tailor an enterprise add-on.
+> Need more than 5,000 comments a month? Reach out to `support@humyn.studio` and we’ll tailor an enterprise add-on.
 
 ## Billing Operations
 
@@ -52,7 +52,7 @@ All plans include full access to dashboards, Explore views, and saved insights. 
 | Data residency | Humyn stores data in US regions. Flag deviations for legal review. |
 | Community data | Confirm your legal team approves storing Reddit/Twitter/YouTube excerpts. |
 | Access logs | Export user activity quarterly for security verification. |
-| Privacy requests | Route takedown or deletion requests to support@humyn.space. |
+| Privacy requests | Route takedown or deletion requests to support@humyn.studio. |
 
 ## Renewal Playbook
 
