--- a/guides/roadmap.mdx
+++ b/guides/roadmap.mdx
@@ -5,64 +5,32 @@ description: "See where Humyn is headed next and help us prioritize the most val
 
 # Humyn Roadmap
 
-We build Humyn to uncover <mark>real community insight</mark> for builders, strategists, and researchers. The roadmap below reflects what’s in motion right now. Add your voice in `#product-feedback` on [Discord](https://discord.gg/bycbt28zpk) or email `hello@humyn.space`.
+We build Humyn to uncover <mark>real community insight</mark> for builders, strategists, and researchers. The roadmap below reflects what’s in motion right now. Add your voice in `#product-feedback` on [Discord](https://discord.gg/bycbt28zpk) or email `support@humyn.studio`.
 
 <Callout>
-Timelines represent earliest release targets. We adjust as signal from customers, data quality, and compliance needs evolve.
+Timelines represent earliest release targets. We adjust as customer signal, data quality, and compliance needs evolve.
 </Callout>
 
-<section className="roadmap-board">
-  <div className="roadmap-column">
-    <h3>High Priority</h3>
-    <p className="roadmap-subtitle">Delivery window: Q4 2025</p>
+<Columns cols={3}>
+  <Card title="High Priority" icon="bolt">
+    **Delivery window: Q4 2025**
 
-    <article className="roadmap-item">
-      <time>November 2025</time>
-      <strong>Export data from projects</strong>
-      <p>Enable <mark>offline backups</mark> and downstream analysis in BI tools or internal archives.</p>
-    </article>
+    - *November 2025* — **Export data from projects**. Enable <mark>offline backups</mark> and downstream analysis in BI tools.  
+    - *November 2025* — **Manual text input**. Add briefs, interview notes, or research summaries so Humyn can <mark>enrich bespoke data</mark>.  
+    - *December 2025* — **Pruning & staging before ingest**. Review and approve comments before they count toward usage limits.
+  </Card>
+  <Card title="Medium Priority" icon="chart-simple">
+    **Discovery in progress**
 
-    <article className="roadmap-item">
-      <time>November 2025</time>
-      <strong>Manual text input</strong>
-      <p>Let teams add briefs, interview notes, and research summaries so Humyn can <mark>enrich bespoke data</mark>.</p>
-    </article>
+    - *December 2026* — **Expanded source support**. Add Twitter/X, interview transcripts, and customer research uploads for <mark>multi-channel intelligence</mark>.
+  </Card>
+  <Card title="Exploratory" icon="seedling">
+    **On the backlog**
 
-    <article className="roadmap-item">
-      <time>December 2025</time>
-      <strong>Pruning & staging before ingest</strong>
-      <p>Review, trim, and approve comments before they count toward usage limits—giving analysts <mark>precision control</mark>.</p>
-    </article>
-  </div>
-
-  <div className="roadmap-column">
-    <h3>Medium Priority</h3>
-    <p className="roadmap-subtitle">Discovery in progress</p>
-
-    <article className="roadmap-item">
-      <time>December 2026</time>
-      <strong>Expanded source support</strong>
-      <p>Add Twitter/X, interview transcripts, and customer research uploads for <mark>multi-channel intelligence</mark>.</p>
-    </article>
-  </div>
-
-  <div className="roadmap-column">
-    <h3>Exploratory</h3>
-    <p className="roadmap-subtitle">On the backlog</p>
-
-    <article className="roadmap-item">
-      <time>2026</time>
-      <strong>Team collaboration</strong>
-      <p>Shared workspaces, permissions, and review flows so cross-functional partners co-create <mark>insight narratives</mark>.</p>
-    </article>
-
-    <article className="roadmap-item">
-      <time>2026</time>
-      <strong>Sandbox insight canvas</strong>
-      <p>Canvas-style environment for UX researchers to map quotes visually and deliver <mark>story-first presentations</mark>.</p>
-    </article>
-  </div>
-</section>
+    - *2026* — **Team collaboration**. Shared workspaces, permissions, and review flows so teams co-create <mark>insight narratives</mark>.  
+    - *2026* — **Sandbox insight canvas**. Canvas-style environment for UX researchers to map quotes visually and deliver <mark>story-first presentations</mark>.
+  </Card>
+</Columns>
 
 <img
   src="/assets/placeholder-frame.svg"
@@ -72,7 +40,7 @@ Timelines represent earliest release targets. We adjust as signal from customers
 
 ## How to Shape the Roadmap
 
-1. Share ideas in the Discord channel or email `hello@humyn.space`.  
+1. Share ideas in the Discord channel or email `support@humyn.studio`.  
 2. Include context: which personas benefit, the workflows impacted, and sample threads validating the need.  
 3. Upvote existing requests—community signal keeps us aligned with the most valuable outcomes.
 
