docs: tighten homepage cards

--- a/index.mdx
+++ b/index.mdx
@@ -42,67 +42,11 @@ Get the full picture of what Humyn does and how to ship the right thing faster.
     Set up your workspace, connect sources, and surface first insights in minutes.
   </Card>
   <Card
-    title="Invite your team"
-    icon="users"
-    href="/account-billing/team-collaboration"
-  >
-    Bring product, design, and research together with secure shared access.
-  </Card>
-  <Card
-    title="Manage billing"
+    title="Account & Billing"
     icon="credit-card"
-    href="/account-billing/managing-subscription"
+    href="/introduction/account-and-billing"
   >
-    Control plans, usage, and invoices from one place.
-  </Card>
-</Columns>
-
-## Core workflows
-
-Humyn is built for designers by designers. Focus on the flows that matter most.
-
-<Columns cols={3}>
-  <Card
-    title="Feedback Hub"
-    icon="comments"
-    href="/core-features/feedback-hub"
-  >
-    Centralize every conversation and filter what matters in seconds.
-  </Card>
-  <Card
-    title="Insights SWOT"
-    icon="chart-simple"
-    href="/core-features/insights-swot"
-  >
-    Turn raw sentiment into strengths, weaknesses, opportunities, and threats.
-  </Card>
-  <Card
-    title="Personas"
-    icon="user"
-    href="/core-features/personas"
-  >
-    Keep customer archetypes live and grounded in the latest community signals.
-  </Card>
-  <Card
-    title="Idea Scorecard"
-    icon="star"
-    href="/core-features/idea-overview-score"
-  >
-    Rank ideas with data-backed confidence before you ship.
-  </Card>
-  <Card
-    title="AI Chat"
-    icon="comment-dots"
-    href="/core-features/ai-chat"
-  >
-    Ask follow-up questions without leaving the insight stream.
-  </Card>
-  <Card
-    title="Themes & Keywords"
-    icon="tags"
-    href="/core-features/themes-keywords"
-  >
-    Track emerging topics and spot shifts before they hit your roadmap.
+    Review plan options, usage allowances, and billing operations.
   </Card>
 </Columns>
 
