cleanup: remove unused pages and fix internal links

--- a/core-features/chat-with-hue.mdx
+++ b/core-features/chat-with-hue.mdx
@@ -41,6 +41,6 @@ Hue is your AI research partner. Instead of combing through dashboards, you can 
 
 ## Connected workflows
 
-- Convert answers into insight cards inside [Explore](explore).  
-- Reference metrics to validate impact in [Dashboard](dashboard) and [Metrics](metrics).  
+- Convert answers into insight cards inside [Explore](/core-features/explore).  
+- Reference metrics to validate impact in [Dashboard](/core-features/dashboard) and [Metrics](/core-features/metrics).  
 - Drop Hue transcripts into shared docs for async onboarding or retros.
