--- a/core-features/dashboard.mdx
+++ b/core-features/dashboard.mdx
@@ -36,6 +36,6 @@ The dashboard is the first stop for founders and operators who want a pulse on w
 
 ## Related next steps
 
-- Build a measurement layer in [Metrics](metrics).  
-- Dive deeper into raw conversations via [Explore](explore).  
-- Ask follow-up questions with [Chat with Hue](chat-with-hue).
+- Build a measurement layer in [Metrics](/core-features/metrics).  
+- Dive deeper into raw conversations via [Explore](/core-features/explore).  
+- Ask follow-up questions with [Chat with Hue](/core-features/chat-with-hue).
