--- a/core-features/explore.mdx
+++ b/core-features/explore.mdx
@@ -40,6 +40,6 @@ Explore is where researchers and storytellers live. It lets you peel back the AI
 
 ## Connected surfaces
 
-- Feed chart-ready insights into [Dashboard](dashboard).  
-- Quantify impact in [Metrics](metrics).  
-- Generate conversational follow-ups with [Chat with Hue](chat-with-hue).
+- Feed chart-ready insights into [Dashboard](/core-features/dashboard).  
+- Quantify impact in [Metrics](/core-features/metrics).  
+- Generate conversational follow-ups with [Chat with Hue](/core-features/chat-with-hue).
