--- a/core-features/feedback-hub.mdx
+++ b/core-features/feedback-hub.mdx
@@ -28,6 +28,6 @@ Feedback Hub gathers every Reddit comment, forum reply, and uploaded transcript 
 
 ## Related workflows
 
-- Bubble up high-signal items to [Dashboard](dashboard).  
-- Turn curated rows into themes with [Explore](explore).  
-- Use [Chat with Hue](chat-with-hue) to expand on promising leads.
+- Bubble up high-signal items to [Dashboard](/core-features/dashboard).  
+- Turn curated rows into themes with [Explore](/core-features/explore).  
+- Use [Chat with Hue](/core-features/chat-with-hue) to expand on promising leads.
