--- a/core-features/metrics.mdx
+++ b/core-features/metrics.mdx
@@ -52,6 +52,6 @@ The mockup above reflects how Humyn pairs qualitative signals with metric tiles:
 
 ## Related workflows
 
-- Visualize the data on the [Dashboard](dashboard).  
-- Investigate anomalies inside [Explore](explore).  
-- Generate narrative-ready summaries with [Chat with Hue](chat-with-hue).
+- Visualize the data on the [Dashboard](/core-features/dashboard).  
+- Investigate anomalies inside [Explore](/core-features/explore).  
+- Generate narrative-ready summaries with [Chat with Hue](/core-features/chat-with-hue).
