--- a/guides/measurement-framework.mdx
+++ b/guides/measurement-framework.mdx
@@ -51,6 +51,6 @@ Owner:
 
 ## Related playbooks
 
-- Feed inputs from the [Dashboard](../core-features/dashboard).  
-- Use tactics from [Adoption Strategies](adoption-strategies) to grow readership.  
-- Track onboarding progress alongside the [Activation Playbook](activation-playbook).
+- Feed inputs from the [Dashboard](/core-features/dashboard).  
+- Use tactics from [Adoption Strategies](/guides/adoption-strategies) to grow readership.  
+- Track onboarding progress alongside the [Activation Playbook](/guides/activation-playbook).
