--- a/index.mdx
+++ b/index.mdx
@@ -56,32 +56,39 @@ When you need to go deeper, these walkthroughs keep the team moving.
 
 <Columns cols={2}>
   <Card
-    title="Validate a new product idea"
-    icon="wand-magic-sparkles"
-    href="/guides/validate-new-product-idea"
+    title="Guides & Use Cases"
+    icon="compass"
+    href="/guides/use-cases"
   >
-    Pressure-test concepts using community conversations.
+    Explore practical playbooks for product, research, and GTM teams.
   </Card>
   <Card
-    title="Run competitor analysis"
-    icon="chart-line"
-    href="/guides/competitor-analysis-swot"
+    title="Activation Playbook"
+    icon="flag-checkered"
+    href="/guides/activation-playbook"
   >
-    Position your solution with a fresh read on what customers say today.
+    Launch Humyn in 30 days with a proven four-week plan.
   </Card>
   <Card
-    title="Prioritize feature requests"
-    icon="list-check"
-    href="/guides/prioritize-feature-requests"
+    title="Adoption Strategies"
+    icon="people-group"
+    href="/guides/adoption-strategies"
   >
-    Rank enhancements by impact and urgency with live data.
+    Embed Humyn rituals across design, product, and revenue teams.
   </Card>
   <Card
-    title="Build research-backed personas"
-    icon="user-group"
-    href="/guides/create-data-backed-personas"
+    title="Measurement Framework"
+    icon="chart-column"
+    href="/guides/measurement-framework"
   >
-    Give design and product a shared, constantly updating source of truth.
+    Quantify qualitative impact and report outcomes to leadership.
+  </Card>
+  <Card
+    title="Roadmap"
+    icon="route"
+    href="/guides/roadmap"
+  >
+    See what’s shipping next and weigh in on upcoming priorities.
   </Card>
 </Columns>
 
