--- a/core-features/themes-keywords.mdx
+++ b/core-features/themes-keywords.mdx
@@ -1,3 +1,4 @@
+---
 title: "Themes & Keywords"
 description: "Clusters and top phrases"
 ---
@@ -17,6 +18,6 @@ Humyn automatically clusters conversations into themes and extracts representati
 
 ## Related moves
 
-- Send standout clusters to [Insights (SWOT)](insights-swot) for framing.  
-- Share keyword cards with marketing to validate messaging.  
-- Convert patterns into dashboards widgets inside [Metrics](metrics).
+- Feed high-signal clusters into [Metrics](/core-features/metrics) as tiles.  
+- Share keyword cards with marketing to validate messaging and copy.  
+- Export standout quotes to [Chat with Hue](/core-features/chat-with-hue) for quick follow-up prompts.
