--- a/snippets/head.mdx
+++ b/snippets/head.mdx
@@ -17,6 +17,31 @@
       font-family: 'Satoshi', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important;
     }
 
+    body {
+      background: linear-gradient(135deg, rgba(248, 250, 255, 0.95), rgba(236, 244, 255, 0.95));
+    }
+
+    html.dark body {
+      background: linear-gradient(120deg, rgba(11, 17, 34, 0.96), rgba(2, 8, 23, 0.96));
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      z-index: -1;
+      background:
+        radial-gradient(circle at 12% 18%, rgba(96, 165, 250, 0.22), transparent 55%),
+        radial-gradient(circle at 80% 88%, rgba(37, 99, 235, 0.18), transparent 60%);
+    }
+
+    html.dark body::before {
+      background:
+        radial-gradient(circle at 18% 20%, rgba(96, 165, 250, 0.32), transparent 52%),
+        radial-gradient(circle at 76% 82%, rgba(37, 99, 235, 0.26), transparent 58%);
+    }
+
     mark {
       background: rgba(250, 204, 21, 0.25);
       color: inherit;
