--- a/guides/roadmap.mdx
+++ b/guides/roadmap.mdx
@@ -45,3 +45,19 @@ Timelines represent earliest release targets. We adjust as customer signal, data
 3. Upvote existing requests—community signal keeps us aligned with the most valuable outcomes.
 
 We review feedback every week during product planning and update this page after each milestone cycle.
+
+<iframe
+  data-tally-src="https://tally.so/embed/nPadxd?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
+  loading="lazy"
+  width="100%"
+  height="1424"
+  frameBorder="0"
+  marginHeight="0"
+  marginWidth="0"
+  title="Customer Feedback"
+></iframe>
+<script>
+  {`
+    var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}
+  `}
+</script>
