--- a/guides/roadmap.mdx
+++ b/guides/roadmap.mdx
@@ -46,13 +46,6 @@ Timelines represent earliest release targets. We adjust as customer signal, data
 
 We review feedback every week during product planning and update this page after each milestone cycle.
 
-<iframe
-  data-tally-src="https://tally.so/embed/nPadxd?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
-  loading="lazy"
-  width="100%"
-  height="1424"
-  frameBorder="0"
-  marginHeight="0"
-  marginWidth="0"
-  title="Customer Feedback"
-></iframe>
+<Button href="https://tally.so/r/nPadxd" icon="message">
+  Share roadmap feedback
+</Button>
