--- a/index.mdx
+++ b/index.mdx
@@ -15,6 +15,21 @@ Humyn turns real conversations from Reddit into <mark>trustworthy insight</mark>
 
 
 
+
+<iframe
+  width="100%"
+  height="360"
+  src="https://www.youtube.com/embed/dC7AQQMEh0k?si=-mUzKJ5_ByZYwPnm"
+  title="Humyn demo"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+  style={{ marginTop: "2rem", borderRadius: "1rem", boxShadow: "0 24px 70px rgba(15, 23, 42, 0.18)" }}
+/>
+
+
+
 ## Start with the essentials
 
 Get the full picture of what Humyn does and how to ship the right thing faster.
