Refresh docs homepage visuals and socials

--- a/essentials/images.mdx
+++ b/essentials/images.mdx
@@ -10,7 +10,7 @@ icon: "image"
   style={{ borderRadius: "1rem", marginBottom: "2rem", boxShadow: "0 24px 60px rgba(9, 9, 11, 0.25)" }}
 />
 
-Humyn’s visual identity leans on calm gradients, rounded corners, and ample white space. Use the assets in this repository to keep every surface consistent across docs, marketing, and product training material.
+Humyn leans on calm gradients, rounded corners, and generous white space. Use the assets in this repo to keep docs, marketing, and product training surfaces aligned.
 
 ## Available assets
 
@@ -19,7 +19,7 @@ Humyn’s visual identity leans on calm gradients, rounded corners, and ample wh
 - `/images/checks-passed.png`: Product UI close-up highlighting moderation and approval states.
 - `/logo/light.svg` and `/logo/dark.svg`: Official Humyn mark (dark/light variants).
 - `/svg logos/`: Original exports if you need to create new sizes.
-- `/assets/landing-page.png`: Landing page hero used on the docs home screen.
+- `/assets/landing-page.png`: Legacy docs hero saved for campaigns and slide decks.
 - `/assets/metrics-mockup.png`: Metrics feature mockup for documentation and enablement.
 - `/assets/demo-video.mp4`: Overview walkthrough for onboarding or marketing use.
 - `/screenshots/`: Product screenshots for core feature docs (dashboard, Explore, Hue chat, and more).
