--- a/index.mdx
+++ b/index.mdx
@@ -5,15 +5,7 @@ description: "Everything you need to launch, learn, and iterate with Humyn Studi
 
 # Welcome to Humyn Docs
 
-Humyn turns real conversations from Reddit into <mark>trustworthy insight</mark> for product teams. These docs take you from first login to <mark>confident decisions</mark> without fluff.
-
-<img
-  src="/assets/landing-page.png"
-  alt="Humyn landing page hero with product highlights"
-  style={{ borderRadius: "1rem", marginTop: "1.5rem", boxShadow: "0 24px 70px rgba(9, 9, 11, 0.18)" }}
-/>
-
-
+Humyn distills real Reddit conversations into <mark>trusted signal</mark> so product teams can move faster with less guesswork. These docs take you from first login to <mark>shipped outcomes</mark> quickly.
 
 
 <iframe
@@ -32,7 +24,7 @@ Humyn turns real conversations from Reddit into <mark>trustworthy insight</mark>
 
 ## Start with the essentials
 
-Get the full picture of what Humyn does and how to ship the right thing faster.
+See how Humyn works, connect data, and unlock value in a hurry.
 
 <Columns cols={2}>
   <Card
@@ -40,27 +32,27 @@ Get the full picture of what Humyn does and how to ship the right thing faster.
     icon="lightbulb"
     href="/introduction/what-is-humyn"
   >
-    Understand the vision, use cases, and why teams rely on Humyn.
+    Learn the vision, core use cases, and where teams win with Humyn.
   </Card>
   <Card
     title="Quickstart"
     icon="rocket"
     href="/introduction/quickstart"
   >
-    Set up your workspace, connect sources, and surface first insights in minutes.
+    Stand up your workspace, connect sources, and surface first insights in minutes.
   </Card>
   <Card
     title="Account & Billing"
     icon="credit-card"
     href="/introduction/account-and-billing"
   >
-    Review plan options, usage allowances, and billing operations.
+    Compare plans, usage allowances, and every billing workflow in one place.
   </Card>
 </Columns>
 
 ## Guides for common jobs
 
-When you need to go deeper, these walkthroughs keep the team moving.
+Go deeper with guided playbooks for product, research, and GTM teams.
 
 <Columns cols={2}>
   <Card
@@ -68,7 +60,7 @@ When you need to go deeper, these walkthroughs keep the team moving.
     icon="compass"
     href="/guides/use-cases"
   >
-    Explore practical playbooks for product, research, and GTM teams.
+    Explore practical patterns to answer product, research, and GTM questions.
   </Card>
   <Card
     title="Activation Playbook"
@@ -104,34 +96,28 @@ When you need to go deeper, these walkthroughs keep the team moving.
 Need help fast? Hit the `Support` link in the navbar or email <a href="mailto:support@humyn.studio">support@humyn.studio</a>.
 </Tip>
 
-<img
-  src="/screenshots/project_dashboard.png"
-  alt="Humyn project dashboard overview"
-  style={{ borderRadius: "1rem", marginTop: "2.5rem", boxShadow: "0 24px 70px rgba(15, 23, 42, 0.14)" }}
-/>
-
 ## Stay connected
 
 <Columns cols={3}>
-  <Card title="Instagram" icon="camera" href="https://www.instagram.com/humynspace">
+  <Card title="Instagram" icon="camera" href="https://www.instagram.com/humyn.studio/">
     Follow launches, behind-the-scenes clips, and community wins.
   </Card>
-  <Card title="Twitter / X" icon="twitter" href="https://twitter.com/humynspace">
+  <Card title="X (Twitter)" icon="twitter" href="https://x.com/HumynStudio">
     Catch feature drops, product threads, and real-time updates.
   </Card>
-  <Card title="TikTok" icon="film" href="https://www.tiktok.com/@humynspace">
+  <Card title="TikTok" icon="film" href="https://www.tiktok.com/@humynstudio">
     Watch quick demos and storytelling tips from the team.
   </Card>
 </Columns>
 
 <Columns cols={3}>
-  <Card title="YouTube" icon="youtube" href="https://www.youtube.com/@humynspace">
+  <Card title="YouTube" icon="youtube" href="https://www.youtube.com/@HumynStudio">
     Deep dives, walkthroughs, and interviews with Humyn operators.
   </Card>
-  <Card title="LinkedIn" icon="linkedin" href="https://www.linkedin.com/company/humynspace">
+  <Card title="LinkedIn" icon="linkedin" href="https://www.linkedin.com/company/humyn-studio">
     Strategic updates for product, research, and GTM leaders.
   </Card>
-  <Card title="Threads" icon="leaf" href="https://www.threads.net/@humynspace">
+  <Card title="Threads" icon="leaf" href="https://www.threads.com/@humyn.studio">
     Lightweight product notes and community highlights.
   </Card>
 </Columns>
