Polish docs UX and add roadmap timeline

--- a/index.mdx
+++ b/index.mdx
@@ -7,6 +7,9 @@ description: "Everything you need to launch, learn, and iterate with Humyn Studi
 
 Humyn distills real Reddit conversations into <mark>trusted signal</mark> so product teams can move faster with less guesswork. These docs take you from first login to <mark>shipped outcomes</mark> quickly.
 
+<Callout>
+Start with the quickstart, then scan the playbooks below—every section is built to get you from raw threads to boardroom-ready stories without context switching.
+</Callout>
 
 <iframe
   width="100%"
@@ -21,6 +24,20 @@ Humyn distills real Reddit conversations into <mark>trusted signal</mark> so pro
 />
 
 
+
+## Why teams choose Humyn
+
+<Columns cols={3}>
+  <Card title="Living source signal" icon="wave-pulse">
+    Surface fresh conversations from Reddit and niche communities with automated ingestion, clustering, and sentiment at a glance.
+  </Card>
+  <Card title="Narratives not noise" icon="comments">
+    Tag highlights, stitch quotes into storylines, and keep a clean audit trail for leadership and customer proof.
+  </Card>
+  <Card title="Ship-ready handoffs" icon="paper-plane">
+    Drop insights straight into playbooks, Loom rundowns, and roadmap reviews without rewriting the story each time.
+  </Card>
+</Columns>
 
 ## Start with the essentials
 
@@ -86,7 +103,7 @@ Go deeper with guided playbooks for product, research, and GTM teams.
   <Card
     title="Roadmap"
     icon="route"
-    href="/guides/roadmap"
+    href="/home/roadmap"
   >
     See what’s shipping next and weigh in on upcoming priorities.
   </Card>
@@ -95,6 +112,20 @@ Go deeper with guided playbooks for product, research, and GTM teams.
 <Tip>
 Need help fast? Hit the `Support` link in the navbar or email <a href="mailto:support@humyn.studio">support@humyn.studio</a>.
 </Tip>
+
+## How teams ramp in week one
+
+<Columns cols={3}>
+  <Card title="1. Ingest signal" icon="download">
+    Connect the first communities, confirm the prompts provided in Quickstart, and validate that the pipeline is capturing the right threads.
+  </Card>
+  <Card title="2. Frame the story" icon="sparkles">
+    Capture the three strongest quotes, tag sentiment, and turn them into a single insight card for your kickoff sync.
+  </Card>
+  <Card title="3. Share & iterate" icon="share-nodes">
+    Publish the recap, gather stakeholder feedback, and adjust prompts or sources before you scale up the intake.
+  </Card>
+</Columns>
 
 ## Stay connected
 
