--- a/introduction/quickstart.mdx
+++ b/introduction/quickstart.mdx
@@ -3,30 +3,58 @@ title: "Quickstart"
 description: "Launch Humyn in under an hour with the workflows our beta teams follow"
 ---
 
-## Launch Checklist
+<Callout>
+Run through these five moves to get from invite email to your first insight share-out inside an hour.
+</Callout>
 
-1. <mark>Request workspace access</mark> — confirm your invite email, set up 2FA, and add collaborators.  
-2. <mark>Select focus communities</mark> — start with two or three high-signal subreddits, Twitter Lists, or YouTube channels.  
-3. <mark>Drop in your first prompts</mark> — use questions like “What blocks onboarding?” or “How do founders describe AI productivity tools?”.  
-4. <mark>Review instant insights</mark> — confirm Humyn captured the right themes, quotes, and sentiment trends.  
-5. <mark>Share the narrative</mark> — pin insights to a workspace board and publish a quick Loom or written recap.
+## Launch in five moves
 
----
+<Columns cols={2}>
+  <Card title="1. Request access" icon="key">
+    Confirm your invite, enable 2FA, and add the core collaborators who will review themes or share recaps.
+  </Card>
+  <Card title="2. Pick communities" icon="satellite-dish">
+    Start with two or three subreddits or channels that already spark debate—enough variety to show value without noise.
+  </Card>
+  <Card title="3. Seed prompts" icon="question">
+    Drop in questions like “What blocks onboarding?” or “How are founders using Humyn?” so the model knows the jobs to solve.
+  </Card>
+  <Card title="4. Validate insights" icon="magnifying-glass">
+    Skim the generated cards, verify sentiment tags, and bookmark the quotes you want to reuse.
+  </Card>
+  <Card title="5. Share the story" icon="paper-plane">
+    Pin the best insight to a board, pair it with a Loom or summary, and send it to stakeholders the same day.
+  </Card>
+</Columns>
 
-## Workspace Setup Checklist
+## Workspace setup ritual
 
-- [ ] Standardize workspace name, brand color, and timezone.  
-- [ ] Tag collaborators by function (Design, Product, GTM).  
-- [ ] Decide who owns daily monitoring vs. weekly synthesis.  
-- [ ] Save the first report template for repeatable share-outs.
+<Columns cols={2}>
+  <Card title="Keep the system clean" icon="wand-magic">
+    Standardize workspace name, brand color, and timezone so reports look consistent when exported or shared.
+  </Card>
+  <Card title="Clarify ownership" icon="people-group">
+    Assign who monitors daily vs. weekly, and tag collaborators by function so alerts land with the right person.
+  </Card>
+  <Card title="Template the recap" icon="note-sticky">
+    Save a baseline report layout—hero insight, supporting quotes, open questions—so every update follows the same rhythm.
+  </Card>
+  <Card title="Front-load governance" icon="shield-halved">
+    Agree on approval thresholds and review cadence before scaling ingestion to avoid rework later.
+  </Card>
+</Columns>
 
 ---
 
 ## Starter Prompts
 
+<Callout>
+Use these to prove immediate value—duplicate and tweak the language to match your product pillar.
+</Callout>
+
 | Prompt | Outcome | Suggested Owner |
 | --- | --- | --- |
-| “Summarize adoption blockers for AI research tools” | Product direction for activation sprints. | Product/Design |
+| “Summarize adoption blockers for AI research tools” | Direction for activation sprints. | Product/Design |
 | “Collect praise quotes about research workflows” | Messaging for landing pages and sales decks. | Marketing |
 | “Identify objections from enterprise buyers” | Enablement insight for sales calls. | GTM |
 
@@ -38,17 +66,9 @@ description: "Launch Humyn in under an hour with the workflows our beta teams fo
 - Capture three bookmarked threads for deep dives.  
 - Sync with stakeholders to align on emerging opportunities.
 
-![Humyn dashboard walkthrough](../images/hero-dark.png)
-
-> Replace the placeholder image with current UI captures or Loom thumbnails from your beta workspace.
-
----
-
-<img
-  src="/assets/placeholder-frame.svg"
-  alt="Placeholder for onboarding workflow illustration"
-  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
-/>
+<Callout>
+Swap the placeholder media below with a Loom capture or dashboard screenshot from your workspace to ground future playbooks.
+</Callout>
 
 ## Next Steps
 
