Refresh quickstart flow and pricing copy

--- a/introduction/account-and-billing.mdx
+++ b/introduction/account-and-billing.mdx
@@ -8,8 +8,8 @@ description: "Keep Humyn access, seats, and spend clean as your team scales"
 | Plan | Price | Ideal for | Highlights |
 | --- | --- | --- | --- |
 | **Free** | $0 | Individuals testing Humyn or running lightweight experiments. | 100 comments/month, 2 projects, AI chat with daily limits. |
-| **Basic** | $12/month (billed annually) | Early-stage teams validating positioning and messaging. | 1,000 comments/month, 50 projects, unlimited AI chat. |
-| **Pro** | $32/month (billed annually) | Agencies and product orgs monitoring multiple launches. | 5,000 comments/month, 50 projects, priority support. |
+| **Basic** | $15/month ($144/year) | Early-stage teams validating positioning and messaging. | 1,000 comments/month, 50 projects, unlimited AI chat. |
+| **Pro** | $40/month ($432/year) | Agencies and product orgs monitoring multiple launches. | 5,000 comments/month, 50 projects, priority support. |
 
 <Callout>
 All plans include full access to dashboards, Explore views, and saved insights. Seat counts are flexible—billing is based on workspace usage, not per-user licensing.
@@ -18,8 +18,8 @@ All plans include full access to dashboards, Explore views, and saved insights. 
 ## Choosing the Right Tier
 
 - <mark>Free</mark> — Perfect for founders or researchers exploring a single market. Monitor two projects (for example, your core product plus a competitor space) and validate positioning quickly.  
-- <mark>Basic</mark> — Best for seed and Series A teams that require weekly intelligence. 1,000 comments/month supports recurring scans across personas and unlimited AI chat keeps synthesis fast.  
-- <mark>Pro</mark> — Built for agencies, consultancies, or in-house insight teams running simultaneous initiatives. Larger allotments support market sweeps and priority support keeps launches on track.
+- <mark>Basic ($15/mo)</mark> — Best for seed and Series A teams that require weekly intelligence. 1,000 comments/month supports recurring scans across personas and unlimited AI chat keeps synthesis fast.  
+- <mark>Pro ($40/mo)</mark> — Built for agencies, consultancies, or in-house insight teams running simultaneous initiatives. Larger allotments support market sweeps and priority support keeps launches on track.
 
 ## Feature Matrix
 
@@ -35,15 +35,9 @@ All plans include full access to dashboards, Explore views, and saved insights. 
 
 ## Billing Operations
 
-- Humyn charges plans annually to keep pricing predictable. You can cancel or upgrade at any time; prorated credits apply when moving up a tier.  
+- Choose month-to-month flexibility at the prices above, or switch to annual billing (automatically applied on upgrade) for a small discount.  
 - Payment methods: major credit cards today, ACH and invoicing for Pro/Enterprise coming soon.  
 - The billing owner can download receipts and manage payment information directly inside the app.
-
-## Seat & Access Policy
-
-- Assign a **workspace owner** to manage tiers and usage monitoring.  
-- Grant seats on demand—if a project needs more collaborators, invite them without worrying about license fees.  
-- Review usage monthly so you can forecast when it’s time to upgrade to Basic or Pro.
 
 ## Compliance & Data Handling
 
@@ -53,27 +47,3 @@ All plans include full access to dashboards, Explore views, and saved insights. 
 | Community data | Confirm your legal team approves storing Reddit/Twitter/YouTube excerpts. |
 | Access logs | Export user activity quarterly for security verification. |
 | Privacy requests | Route takedown or deletion requests to support@humyn.studio. |
-
-## Renewal Playbook
-
-- 90 days before renewal: Capture impact metrics (insights shipped, campaigns influenced, roadmap changes).  
-- 60 days out: Reassess plan fit—if you frequently hit comment limits, consider upgrading.  
-- 30 days out: Confirm payment method, document stakeholder approvals, and note any contract adjustments.
-
-## Reporting Rhythm
-
-- <mark>Monthly digest</mark>: Usage vs. allocation, new projects launched, notable insights.  
-- <mark>Quarterly briefing</mark>: Adoption by function, tier fit, and upcoming adjustments.  
-- <mark>Ad hoc updates</mark>: Alert finance and leadership when usage spikes mid-cycle.
-
-## Handy Links
-
-- Billing portal (coming soon) — Track invoices and manage payment details.  
-- Workspace standards — Link your internal Notion/Confluence page here.  
-- Finance escalation — Document the Slack channel or email alias for urgent billing issues.
-
-<img
-  src="/assets/placeholder-frame.svg"
-  alt="Placeholder for billing dashboard preview"
-  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
-/>
