--- a/introduction/quickstart.mdx
+++ b/introduction/quickstart.mdx
@@ -3,27 +3,39 @@ title: "Quickstart"
 description: "Launch Humyn in under an hour with the workflows our beta teams follow"
 ---
 
+<iframe
+  width="100%"
+  height="360"
+  src="https://www.youtube.com/embed/dC7AQQMEh0k?si=-mUzKJ5_ByZYwPnm"
+  title="Humyn demo"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+  style={{ marginBottom: "2rem", borderRadius: "1rem", boxShadow: "0 24px 70px rgba(15, 23, 42, 0.18)" }}
+/>
+
 <Callout>
-Run through these five moves to get from invite email to your first insight share-out inside an hour.
+Run through these five moves to go from sign-up to actionable insight in a single session.
 </Callout>
 
 ## Launch in five moves
 
 <Columns cols={2}>
-  <Card title="1. Request access" icon="key">
-    Confirm your invite, enable 2FA, and add the core collaborators who will review themes or share recaps.
+  <Card title="1. Sign in or create your account" icon="key">
+    Accept the invite or create a workspace, enable 2FA, and invite teammates who will review findings with you.
   </Card>
-  <Card title="2. Pick communities" icon="satellite-dish">
-    Start with two or three subreddits or channels that already spark debate—enough variety to show value without noise.
+  <Card title="2. Create a new project" icon="folder-plus">
+    Click `New project`, select an icon, set a clear name, and add a short description so everyone knows the lens you’re watching.
   </Card>
-  <Card title="3. Seed prompts" icon="question">
-    Drop in questions like “What blocks onboarding?” or “How are founders using Humyn?” so the model knows the jobs to solve.
+  <Card title="3. Open Add Comments" icon="comment-plus">
+    Jump into the Add Comments tab to define the research topic and the POV you want Humyn to monitor.
   </Card>
-  <Card title="4. Validate insights" icon="magnifying-glass">
-    Skim the generated cards, verify sentiment tags, and bookmark the quotes you want to reuse.
+  <Card title="4. Add keywords & Reddit sources" icon="list-check">
+    Enter the keywords, phrases, and Reddit URLs that capture your audience so Humyn ingests the right threads.
   </Card>
-  <Card title="5. Share the story" icon="paper-plane">
-    Pin the best insight to a board, pair it with a Loom or summary, and send it to stakeholders the same day.
+  <Card title="5. Explore or Chat for insight" icon="sparkles">
+    Head to `Explore` for community-wide patterns or `Chat` to ask follow-up questions and unlock takeaways fast.
   </Card>
 </Columns>
 
@@ -67,7 +79,7 @@ Use these to prove immediate value—duplicate and tweak the language to match y
 - Sync with stakeholders to align on emerging opportunities.
 
 <Callout>
-Swap the placeholder media below with a Loom capture or dashboard screenshot from your workspace to ground future playbooks.
+Record a Loom or capture a dashboard screenshot of your first win and pin it to the workspace so new collaborators ramp quickly.
 </Callout>
 
 ## Next Steps
